chore(junit): add Junit 5 migration